Reduce use of \tl_to_lowercase:n
Not every use is removed here as there is one that needs other
changes. Note that most are simply converted to \tex_lowercase:D,
which is OK in l3kernel and covers the bootstrap/edge case situation.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -4598,12 +4598,7 @@
 %   \cs{@@_token_generic:NNTF} function.
 %    \begin{macrocode}
 \group_begin:
-  \char_set_catcode_other:N \O
-  \char_set_catcode_other:N \U
-  \char_set_catcode_other:N \T
-  \char_set_catcode_other:N \E
-  \char_set_catcode_other:N \R
-  \tl_to_lowercase:n
+  \cs_set_protected:Npn \@@_tmp:w #1 \q_stop
     {
       \cs_new_protected_nopar:Npn \@@_execute_branches_N_type:
         {
@@ -4615,16 +4610,17 @@
             \exp_after:wN \@@_N_type:w
               \token_to_meaning:N \l_peek_token
               \q_mark \@@_N_type_aux:nnw
-              OUTER \q_mark \use_none_delimit_by_q_stop:w
+              #1 \q_mark \use_none_delimit_by_q_stop:w
               \q_stop
             \exp_after:wN \@@_true:w
           \else:
             \exp_after:wN \@@_false:w
           \fi:
         }
-      \cs_new_protected:Npn \@@_N_type:w #1 OUTER #2 \q_mark #3
-        { #3 {#1} {#2} }
+      \cs_new_protected:Npn \@@_N_type:w ##1 #1 ##2 \q_mark ##3
+        { ##3 {##1} {##2} }
     }
+  \exp_after:wN \@@_tmp:w \tl_to_str:n { outer } \q_stop
 \group_end:
 \cs_new_protected:Npn \@@_N_type_aux:nnw #1 #2 #3 \fi:
   {
