--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -912,24 +912,24 @@
 \group_begin:
   \char_set_catcode_active:n { `\= }
   \char_set_catcode_active:n { `\, }
-  \char_set_lccode:nn { `\8 } { `\= }
-  \char_set_lccode:nn { `\9 } { `\, }
-\tl_to_lowercase:n
-  {
-    \group_end:
-    \cs_new_protected:Npn \@@_parse:n #1
-      {
-        \group_begin:
-          \tl_set:Nn \l_@@_sanitise_tl {#1}
-          \tl_replace_all:Nnn \l_@@_sanitise_tl { = } { 8 }
-          \tl_replace_all:Nnn \l_@@_sanitise_tl { , } { 9 }
-          \tl_clear:N \l_@@_parse_tl
-          \exp_after:wN \@@_parse_elt:w \exp_after:wN
-            \q_nil \l_@@_sanitise_tl 9 \q_recursion_tail 9 \q_recursion_stop
-        \exp_after:wN \group_end:
-        \l_@@_parse_tl
-      }
-  }
+  \cs_new_protected:Npx \@@_parse:n #1
+    {
+      \group_begin:
+        \tl_set:Nn \exp_not:N \l_@@_sanitise_tl {#1}
+        \tl_replace_all:Nnn \exp_not:N \l_@@_sanitise_tl
+          { \exp_not:N = } { \token_to_str:N = }
+        \tl_replace_all:Nnn \exp_not:N \l_@@_sanitise_tl
+          { \exp_not:N , } { \token_to_str:N , }
+        \tl_clear:N \exp_not:N \l_@@_parse_tl
+        \exp_not:N \exp_after:wN
+          \exp_not:N \@@_parse_elt:w \exp_not:N \exp_after:wN
+          \exp_not:N \q_nil \exp_not:N \l_@@_sanitise_tl
+          \token_to_str:N , \exp_not:N \q_recursion_tail
+            \token_to_str:N , \exp_not:N \q_recursion_stop
+      \exp_not:N \exp_after:wN \group_end:
+      \exp_not:N \l_@@_parse_tl
+    }
+\group_end:
 %    \end{macrocode}
 % \end{macro}
 %
