--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2953,7 +2953,7 @@
     \tl_set:Nn \l_@@_split_list_tl {#2}
     \group_begin:
     \char_set_lccode:nn { `\@ } { `#1 }
-    \tex_lowercase:n
+    \tex_lowercase:D
       {
          \group_end:
         \tl_replace_all:Nnn \l_@@_split_list_tl { @ } {#1}
