REmove \tl_to_lowercase:n from l3trial
The htoks case probably does need the primitive, but for the font
part using \char_generate:nn is hopefully safe. (It would help if
the font tests were working!)

--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -2294,20 +2294,14 @@
 %
 % \begin{macro}{\DeclareTextComposite}
 %    \begin{macrocode}
-\tl_set:Nx \l_xfss_tmpa_tl
-  { \tex_catcode:D \c_zero=\tex_the:D\tex_catcode:D \c_zero\scan_stop: }
-\char_set_catcode_letter:n {\c_zero} % which is "^^@" below
 \DeclareDocumentCommand \DeclareTextComposite {mmmm}
   {
-    \tl_set:Nn \l_xfss_tmpa_tl
-      { \DeclareTextCompositeCommand #1 {#2} {#3} }
-    \group_begin:
-      \tex_lccode:D \c_zero #4
-      \tl_to_lowercase:n  {
-    \group_end:
-    \l_xfss_tmpa_tl ^^@ }
+    \use:x
+      {
+        \exp_not:n { \DeclareTextCompositeCommand #1 {#2} {#3} }
+          \char_generate:nn {#4} { 12 }
+      }
   }
-\l_xfss_tmpa_tl
 %    \end{macrocode}
 % \end{macro}
 %
