--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -628,28 +628,20 @@
 %   we cannot simply use |#1| since this may be an implicit character
 %   token).
 %    \begin{macrocode}
-\group_begin:
-  \char_set_catcode_letter:n { 0 }
-  \cs_new_protected:Npn \@@_primitive_the_letter:w #1
-    {
-      #1
-      \group_begin:
-        \char_set_lccode:nn { 0 } { \@@_token_to_charcode:N #1 }
-        \tex_lowercase:D { \tl_gput_right:Nn \g_@@_result_tl { ^^@ } }
-      \group_end:
-      \@@_parse:w
-    }
-  \char_set_catcode_other:n { 0 }
-  \cs_new_protected:Npn \@@_primitive_the_character:w #1
-    {
-      #1
-      \group_begin:
-        \char_set_lccode:nn { 0 } { \@@_token_to_charcode:N #1 }
-        \tex_lowercase:D { \tl_gput_right:Nn \g_@@_result_tl { ^^@ } }
-      \group_end:
-      \@@_parse:w
-    }
-\group_end:
+\cs_new_protected:Npn \@@_primitive_the_letter:w #1
+  {
+    #1
+    \tl_gput_right:Nx \g_@@_result_tl
+      { \char_generate:nn { \@@_token_to_charcode:N #1 } { 11 } }
+    \@@_parse:w
+  }
+\cs_new_protected:Npn \@@_primitive_the_character:w #1
+  {
+    #1
+    \tl_gput_right:Nx \g_@@_result_tl
+      { \char_generate:nn { \@@_token_to_charcode:N #1 } { 12 } }
+    \@@_parse:w
+  }
 %    \end{macrocode}
 % \end{macro}
 %
