Fix "loose" => "lose" where appropriate

--- a/l3leftovers/l3chk.dtx
+++ b/l3leftovers/l3chk.dtx
@@ -104,7 +104,7 @@
 %                  \tex_global_chk: |
 % }
 % To allow implementations where we precede some function with
-% "\tex_global:D" without loosing the possibility to check for the
+% "\tex_global:D" without losing the possibility to check for the
 % correct variable type the following helper functions can be used:
 % "\chk_local_or_tex_global:N" <cs> is the variable check which is
 % usually let to "\chk_local:N", i.e.\ it will check that its argument
@@ -209,7 +209,7 @@
 % \begin{macro}{\tex_global_chk:}
 % \begin{macro}{\chk_local_or_tex_global:N}
 %    To allow implementations where we precede some function with
-%    |\tex_global:D| without loosing the possibility to check for the
+%    |\tex_global:D| without losing the possibility to check for the
 %    correct type of a variable, the following helper functions can be
 %    used: |\chk_local_or_tex_global:N| \meta{variable} is the variable
 %    check which is usually |\cs_set_eq:NN| to |\chk_local:N|, i.e.\ it will
