--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1912,7 +1912,7 @@
               }
           }
 %    \end{macrocode}
-%   This section needs a little explanation. In order to avoid loosing any
+%   This section needs a little explanation. In order to avoid losing any
 %   braces, a token needs to be inserted before the argument to be grabbed.
 %   If the argument runs away because the closing token is missing then this
 %   inserted token shows up in the terminal. Ideally, |#1| would therefore be
