Move an argument outside \tex_lowercase:D

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2951,10 +2951,10 @@
     \char_set_lccode:nn { `\@ } { `#1 }
     \tex_lowercase:D
       {
-         \group_end:
-        \tl_replace_all:Nnn \l_@@_split_list_tl { @ } {#1}
-      }
-     \@@_split_list_multi:nV {#1}  \l_@@_split_list_tl
+        \group_end:
+        \tl_replace_all:Nnn \l_@@_split_list_tl { @ }
+      }   {#1}
+     \@@_split_list_multi:nV {#1} \l_@@_split_list_tl
    }
 \group_end:
 %    \end{macrocode}
