--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1057,7 +1057,7 @@
 %   \end{itemize}
 %   and other values will raise an error.
 %
-%   The \meta{catcode} may be any one valid for the engine in use. Note
+%   The \meta{charcode} may be any one valid for the engine in use. Note
 %   however that for \XeTeX{} releases prior to 0.99992 only the 8-bit
 %   range ($0$ to $255$) is accepted due to engine limitations.
 % \end{function}
