Use manual updating of versions in l3packages
Using $Id here causes some issues with automated testing (anything
which checks out not using Git not SVN gets "0000/00/00" as a date).
Moreover, I have to hand-edit three of the four files here at every
release in any case, and will add the same interlock to xfrac
(should really be there). As such, there is no additional work for
me in this change.

--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -50,8 +50,10 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\GetIdInfo$Id$
-  {LaTeX2e option processing using LaTeX3 keys}
+\def\ExplFileName{l3keys2e}
+\def\ExplFileDescription{LaTeX2e option processing using LaTeX3 keys}
+\def\ExplFileDate{2015/09/27}
+\def\ExplFileVersion{6111}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
