--- a/l3packages/xfrac/xfrac.dtx
+++ b/l3packages/xfrac/xfrac.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 %
 %% File: xfrac.dtx Copyright (C) 2004, 2008-2010 Morten Hoegholm
-%%                           (C) 2011,2012,2014 The LaTeX3 Project
+%%                           (C) 2011,2012,2014,2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -37,8 +37,10 @@
 %
 %<*driver|package>
 \RequirePackage{amstext,graphicx,l3keys2e,textcomp,xparse,xtemplate}
-\GetIdInfo$Id$
-  {L3 Experimental split-level fractions}
+\def\ExplFileName{xfrac}
+\def\ExplFileDescription{L3 Experimental split-level fractions}
+\def\ExplFileDate{2015/09/27}
+\def\ExplFileVersion{6111}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
