Update l3names for LuaTeX 0.81
Mainly a question of picking up new names, but there were also a couple
of pdfTeX primitives we were missing that LuaTeX also has.

There are two renames for us, for page height and width (from Omega,
so not related to PDF output).

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -611,11 +611,9 @@
   \__kernel_primitive:NN \pdfoutput                 \pdftex_pdfoutput:D
   \__kernel_primitive:NN \pdfpageattr               \pdftex_pdfpageattr:D
   \__kernel_primitive:NN \pdfpagebox                \pdftex_pdfpagebox:D
-  \__kernel_primitive:NN \pdfpageheight             \pdftex_pdfpageheight:D
   \__kernel_primitive:NN \pdfpageref                \pdftex_pdfpageref:D
   \__kernel_primitive:NN \pdfpageresources          \pdftex_pdfpageresources:D
   \__kernel_primitive:NN \pdfpagesattr              \pdftex_pdfpagesattr:D
-  \__kernel_primitive:NN \pdfpagewidth              \pdftex_pdfpagewidth:D
   \__kernel_primitive:NN \pdfrefobj                 \pdftex_pdfrefobj:D
   \__kernel_primitive:NN \pdfrefxform               \pdftex_pdfrefxform:D
   \__kernel_primitive:NN \pdfrefximage              \pdftex_pdfrefximage:D
@@ -639,6 +637,8 @@
 %    \end{macrocode}
 % While these are not.
 %    \begin{macrocode}
+  \__kernel_primitive:NN \ifpdfabsdim               \pdftex_ifabsdim:D
+  \__kernel_primitive:NN \ifpdfabsnum               \pdftex_ifabsnum:D
   \__kernel_primitive:NN \ifpdfprimitive            \pdftex_ifprimitive:D
   \__kernel_primitive:NN \pdfadjustspacing          \pdftex_adjustspacing:D
   \__kernel_primitive:NN \pdfcopyfont               \pdftex_copyfont:D
@@ -657,6 +657,8 @@
   \__kernel_primitive:NN \pdfmapline                \pdftex_mapline:D
   \__kernel_primitive:NN \pdfnoligatures            \pdftex_noligatures:D
   \__kernel_primitive:NN \pdfnormaldeviate          \pdftex_normaldeviate:D
+  \__kernel_primitive:NN \pdfpageheight             \pdftex_pageheight:D
+  \__kernel_primitive:NN \pdfpagewidth              \pdftex_pagewidth:D
   \__kernel_primitive:NN \pdfpkmode                 \pdftex_pkmode:D
   \__kernel_primitive:NN \pdfpkresolution           \pdftex_pkresolution:D
   \__kernel_primitive:NN \pdfprimitive              \pdftex_primitive:D
@@ -753,9 +755,7 @@
 %    \end{macrocode}
 % Primitives from \LuaTeX{}, some of which have been ported back to
 % \XeTeX{}. Notice that \tn{expanded} was intended for \pdfTeX{}~1.50 but
-% as that was not released we call this a \LuaTeX{} primitive. Primitives
-% which are aliases are covered only once, so for example \tn{pdfpageheight}
-% covers \tn{pageheight} as well.
+% as that was not released we call this a \LuaTeX{} primitive.
 %    \begin{macrocode}
   \__kernel_primitive:NN \alignmark                 \luatex_alignmark:D
   \__kernel_primitive:NN \aligntab                  \luatex_aligntab:D
@@ -771,6 +771,7 @@
   \__kernel_primitive:NN \expanded                  \luatex_expanded:D
   \__kernel_primitive:NN \fontid                    \luatex_fontid:D
   \__kernel_primitive:NN \formatname                \luatex_formatname:D
+  \__kernel_primitive:NN \hyphenationmin            \luatex_hypenationmin:D
   \__kernel_primitive:NN \gleaders                  \luatex_gleaders:D
   \__kernel_primitive:NN \initcatcodetable          \luatex_initcatcodetable:D
   \__kernel_primitive:NN \latelua                   \luatex_latelua:D
@@ -1138,9 +1139,23 @@
 % confusing.
 %    \begin{macrocode}
 \etex_ifdefined:D \luatex_luatexversion:D
-  \tex_let:D \pdftex_pdftexbanner:D  \tex_undefined:D
-  \tex_let:D \pdftex_pdftexbanner:D  \tex_undefined:D
-  \tex_let:D \pdftex_pdftexversion:D \tex_undefined:D
+  \tex_let:D \pdftex_pdftexbanner:D   \tex_undefined:D
+  \tex_let:D \pdftex_pdftexrevision:D \tex_undefined:D
+  \tex_let:D \pdftex_pdftexversion:D  \tex_undefined:D
+\tex_fi:D
+%    \end{macrocode}
+% From v0.81, \LuaTeX{} drops the |pdf| prefix in some cases.
+%    \begin{macrocode}
+\etex_ifdefined:D \lastxpos
+  \tex_let:D \pdftex_lastxpos:D       \lastxpos
+  \tex_let:D \pdftex_lastypos:D       \lastypos
+  \tex_let:D \pdftex_normaldeviate:D  \normaldeviate
+  \tex_let:D \pdftex_pageheight:D     \pageheight
+  \tex_let:D \pdftex_pagewith:D       \pagewidth
+  \tex_let:D \pdftex_randomseed:D     \randomseed
+  \tex_let:D \pdftex_setrandomseed:D  \setrandomseed
+  \tex_let:D \pdftex_savepos:D        \savepos
+  \tex_let:D \pdftex_uniformdeviate:D \uniformdeviate
 \tex_fi:D
 %    \end{macrocode}
 %
