Explain why we undefine a few names

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1136,7 +1136,8 @@
 \tex_fi:D
 %    \end{macrocode}
 % Up to v0.80, \LuaTeX{} defines the \pdfTeX{} version data: rather
-% confusing.
+% confusing. Removing them means that \cs{pdftex_pdftexversion:D} is
+% a marker for \pdfTeX{} alone: useful in engine-dependent code later.
 %    \begin{macrocode}
 \etex_ifdefined:D \luatex_luatexversion:D
   \tex_let:D \pdftex_pdftexbanner:D   \tex_undefined:D
