Increase min. pdfTeX version to 1.40
As disucssed by the team, this is realistically going to be needed
to keep on top of engine verson issues. Note that pdfTeX 1.40 has
been available since 2007 so there is little real-world impact.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3drivers.dtx Copyright(C) 2011-2014 The LaTeX3 Project
+%% File: l3drivers.dtx Copyright(C) 2011-2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -225,9 +225,9 @@
 %   \texttt{(x)dvipdfmx} this is done using an appropriate special. Note
 %   that here and later, the \texttt{dvipdfmx} documentation does not cover
 %   the |literal| key word but that this appears to behave in the same way as
-%   \pdfTeX{}'s \tn{pdfliteral} (making life easier all-round).
+%   \pdfTeX{}'s \tn{pdfliteral} (making life easier all-round). For \pdfTeX{}
+%   and \LuaTeX{} giving direct PDF output there is a dedicated primitive.
 %    \begin{macrocode}
-%<*!pdfmode>
 \cs_new_protected_nopar:Npn \@@_state_save:
 %<*dvips>
   { \tex_special:D { ps:gsave } }
@@ -235,6 +235,9 @@
 %<*dvipdfmx|xdvipdfmx>
   { \tex_special:D { pdf:literal~q } }
 %</dvipdfmx|xdvipdfmx>
+%<*pdfmode>
+  { \pdftex_pdfsave:D }
+%</pdfmode>
 \cs_new_protected_nopar:Npn \@@_state_restore:
 %<*dvips>
   { \tex_special:D { ps:grestore } }
@@ -242,24 +245,8 @@
 %<*dvipdfmx|xdvipdfmx>
   { \tex_special:D { pdf:literal~Q } }
 %</dvipdfmx|xdvipdfmx>
-%</!pdfmode>
-%    \end{macrocode}
-%   For direct PDF output there is also a need to worry about the version
-%   of \pdfTeX{} in use: the \tn{pdfsave} primitive was only introduced
-%   in version~1.40.0.
-%    \begin{macrocode}
 %<*pdfmode>
-\cs_if_exist:NTF \pdftex_pdfsave:D
-  {
-    \cs_new_eq:NN \@@_state_save:    \pdftex_pdfsave:D
-    \cs_new_eq:NN \@@_state_restore: \pdftex_pdfrestore:D
-  }
-  {
-    \cs_new_protected_nopar:Npn \@@_state_save:
-      { \pdftex_pdfliteral:D { q } }
-    \cs_new_protected_nopar:Npn \@@_state_restore:
-      { \pdftex_pdfliteral:D { Q } }
-  }
+  { \pdftex_pdfrestore:D }
 %</pdfmode>
 %    \end{macrocode}
 % \end{macro}
@@ -341,27 +328,20 @@
 %
 % \begin{macro}[int]{\@@_matrix:n}
 %   Here the appropriate function is set up to insert an affine matrix
-%   into the PDF. With a new enough \pdfTeX{} (version~1.40.0 or later)
-%   there is a primitive for this, which only needs the rotation/scaling/skew
-%   part. With an older \pdfTeX{} or with \texttt{(x)dvipdfmx} the matrix
-%   also has to include a translation part: that is always zero and so is
-%   built in here.
+%   into the PDF. With \pdfTeX{} and \LuaTeX{} in direct PDF output mode there
+%   is a primitive for this, which only needs the rotation/scaling/skew part.
+%   With \texttt{(x)dvipdfmx} the matrix also has to include a translation
+%   part: that is always zero and so is built in here.
 %    \begin{macrocode}
+%<*!dvips>
+\cs_new_protected:Npn \@@_matrix:n #1
 %<*pdfmode>
-\cs_if_exist:NTF \pdftex_pdfsetmatrix:D
-  {
-    \cs_new_protected:Npn \@@_matrix:n #1
-      { \pdftex_pdfsetmatrix:D {#1} }
-  }
-  {
-    \cs_new_protected:Npn \@@_matrix:n #1
-      { \@@_literal:n { #1 \c_space_tl 0~0~cm } }
-  }
+  { \pdftex_pdfsetmatrix:D {#1} }
 %</pdfmode>
 %<*dvipdfmx|xdvipdfmx>
-\cs_new_protected:Npn \@@_matrix:n #1
   { \@@_literal:n { #1 \c_space_tl 0~0~cm } }
 %</dvipdfmx|xdvipdfmx>
+%</!dvips>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -521,7 +501,7 @@
 % \end{variable}
 %
 % \begin{variable}{\l_@@_color_stack_int}
-%   \pdfTeX{} (version~1.40.0 or later) and \LuaTeX{} have multiple stacks
+%   \pdfTeX{} and \LuaTeX{} have multiple stacks
 %   available, and the color stack therefore needs a number when in PDF mode.
 %    \begin{macrocode}
 %<*pdfmode>
@@ -545,31 +525,15 @@
 \cs_new_protected_nopar:Npn \@@_color_reset:
   { \tex_special:D { color~pop } }
 %</dvipdfmx|dvips|xdvipdfmx>
-%    \end{macrocode}
-%   Once again there is a version switch for \pdfTeX{}, as the
-%   \tn{pdfcolorstack} primitive was introduced in version~1.40.0.
-%    \begin{macrocode}
 %<*pdfmode>
-\cs_if_exist:NTF \pdftex_pdfcolorstack:D
+\cs_new_protected_nopar:Npn \@@_color_ensure_current:
   {
-    \cs_new_protected_nopar:Npn \@@_color_ensure_current:
-      {
-        \pdftex_pdfcolorstack:D \l_@@_color_stack_int push
-          { \l_@@_current_color_tl }
-        \group_insert_after:N \@@_color_reset:
-      }
-    \cs_new_protected_nopar:Npn \@@_color_reset:
-      { \pdftex_pdfcolorstack:D \l_@@_color_stack_int pop \scan_stop: }
+    \pdftex_pdfcolorstack:D \l_@@_color_stack_int push
+      { \l_@@_current_color_tl }
+    \group_insert_after:N \@@_color_reset:
   }
-  {
-    \cs_new_protected_nopar:Npn \@@_color_ensure_current:
-      {
-        \@@_literal:n { \l_@@_current_color_tl }
-        \group_insert_after:N \@@_color_reset:
-      }
-    \cs_new_protected_nopar:Npn \@@_color_reset:
-      { \@@_literal:n { \l_@@_current_color_tl } }
-  }
+\cs_new_protected_nopar:Npn \@@_color_reset:
+  { \pdftex_pdfcolorstack:D \l_@@_color_stack_int pop \scan_stop: }
 %</pdfmode>
 %    \end{macrocode}
 % \end{macro}
