--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -473,9 +473,11 @@
   \def\LongText%
     {%
       LaTeX3 requires the e-TeX primitives and \string\pdfstrcmp.\LineBreak
+      Direct PDF production also requires additional primitives listed in the
+      README.\LineBreak
       \LineBreak
       These are available in the engines\LineBreak
-      - pdfTeX v1.30\LineBreak
+      - pdfTeX v1.40\LineBreak
       - XeTeX v0.9994\LineBreak
       - LuaTeX v0.40\LineBreak
       - e-(u)pTeX mid-2012\LineBreak
@@ -483,10 +485,17 @@
       \LineBreak
     }%
   \ifnum0%
-    \expandafter\ifx\csname pdfstrcmp\endcsname\relax\else 1\fi
+    \expandafter\ifx\csname pdfstrcmp\endcsname\relax
+    \else
+      \expandafter\ifx\csname pdftexversion\endcsname\relax
+        1%
+      \else
+        \ifnum\pdftexversion<140 \else 1\fi
+      \fi
+    \fi
     \expandafter\ifx\csname directlua\endcsname\relax
     \else
-      \ifnum\luatexversion<36 \else 1\fi
+      \ifnum\luatexversion<40 \else 1\fi
     \fi
     =0 %
       \newlinechar`\^^J %
