Fix one missed rename

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1146,7 +1146,7 @@
 \cs_new_protected_nopar:Npn \galley_par:
   {
     \s__par_omit
-    \exp_after:wN \@@_par_auxi: \exp:w \exp_continue_f:w
+    \exp_after:wN \@@_par_auxi: \exp:w \exp_end_continue_f:w
   }
 \cs_new_protected:Npn \@@_par_auxi:
   {
