Move old bool_not and bool_xor back to l3prg
When moving the new bool_all, bool_and, bool_any,
bool_or from l3prg (where I mistakenly put them)
to l3candidates, the pre-existing bool_not and
bool_xor moved too.

--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -391,6 +391,23 @@
 %   the next predicate or group.
 % \end{function}
 %
+% \begin{function}[EXP, updated = 2012-07-08]{\bool_not_p:n}
+%   \begin{syntax}
+%      \cs{bool_not_p:n} \Arg{boolean expression}
+%   \end{syntax}
+%   Function version of |!(|\meta{boolean expression}|)| within a boolean
+%   expression.
+% \end{function}
+%
+% \begin{function}[EXP, updated = 2012-07-08]{\bool_xor_p:nn}
+%   \begin{syntax}
+%     \cs{bool_xor_p:nn} \Arg{boolexpr_1} \Arg{boolexpr_2}
+%   \end{syntax}
+%   Implements an \enquote{exclusive or} operation between two boolean
+%   expressions. There is no infix operation for this logical
+%   operator.
+% \end{function}
+%
 % \section{Logical loops}
 %
 % Loops using either boolean expressions or stored boolean values.
@@ -1203,6 +1220,31 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\bool_not_p:n}
+% \UnitTested
+%   The Not variant just reverses the outcome of \cs{bool_if_p:n}. Can
+%   be optimized but this is nice and simple and according to the
+%   implementation plan. Not even particularly useful to have it when
+%   the infix notation is easier to use.
+%    \begin{macrocode}
+\cs_new:Npn \bool_not_p:n #1 { \bool_if_p:n { ! ( #1 ) } }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\bool_xor_p:nn}
+% \UnitTested
+%    Exclusive or. If the boolean expressions have same truth value,
+%    return false, otherwise return true.
+%    \begin{macrocode}
+\cs_new:Npn \bool_xor_p:nn #1#2
+  {
+    \int_compare:nNnTF { \bool_if_p:n {#1} } = { \bool_if_p:n {#2} }
+      \c_false_bool
+      \c_true_bool
+  }
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsection{Logical loops}
