--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3final.dtx Copyright (C) 1990-2014 The LaTeX3 Project
+%% File: l3final.dtx Copyright (C) 1990-2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -76,6 +76,41 @@
 %    \begin{macrocode}
 %<*initex>
 %    \end{macrocode}
+%
+% \subsection{Temporary hacks}
+%
+% \begin{macro}{\T1/lmr/m/n/10}
+%   For \emph{testing only} provide some kind of output: for that we
+%   need a font. At present, select Latin Modern Roman at 10\,pt:
+%   entirely arbitrary but at least usable.
+%    \begin{macrocode}
+\tex_everypar:D \exp_after:wN
+  {
+    \exp_after:wN \tex_font:D \cs:w T1/lmr/m/n/10 \cs_end:
+      = ec-lmr10 \scan_stop:
+    \use:c { T1/lmr/m/n/10 }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+%  Produce PDF output if possible (easier testing) and set some kind of
+%  horizontal width: the one here is the \LaTeXe{} default. A parfill is
+%  also useful so we get some kind of sensible paragraphs.
+%    \begin{macrocode}
+\dim_set:Nn \tex_hsize:D { 345pt }
+\skip_set:Nn \tex_parfillskip:D { 0pt plus 1fil }
+\cs_if_exist:NT \pdftex_pdfoutput:D
+  { \int_set:Nn \pdftex_pdfoutput:D { 1 } }
+%    \end{macrocode}
+%
+% \begin{macro}{\stop}
+%   A way out of the run without needing to switch to the code environment.
+%    \begin{macrocode}
+\cs_set_eq:NN \stop \tex_end:D
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Final tasks}
 %
 % \begin{macro}{\par}
 %   \TeX{} has a nasty habit of inserting a command with the name \cs{par}
