Update engine requirements to LuaTeX 0.70
The code to emulate \Ucharcat needs the correct Lua support:
this perhaps could be avoided but it would be awkward. Update
the docs as a result, leaving things general in terms of primitive
requirements as they are now somewhat more complex to explain!

Note that at some point XeTeX will need to be stepped to v0.99992
as that provides \Ucharcat.

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -389,23 +389,22 @@
 %
 % \subsection{Engine requirements}
 %
-% The code currently requires functionality equivalent to \tn{pdfstrcmp}
-% in addition to \eTeX{}. This is picked up by testing for the \tn{pdfstrcmp}
-% primitive or a version of \LuaTeX{} capable of emulating it.
+% The code currently requires \eTeX{} and functionality equivalent to
+% \tn{pdfstrcmp}, and also driver and Unicode character support. This is
+% available in a reasonably-wide range of engines.
 %    \begin{macrocode}
 \begingroup
   \def\next{\endgroup}%
   \def\ShortText{Required primitives not found}%
   \def\LongText%
     {%
-      LaTeX3 requires the e-TeX primitives and \string\pdfstrcmp.\LineBreak
-      Direct PDF production also requires additional primitives listed in the
-      README.\LineBreak
+      LaTeX3 requires the e-TeX primitives and additional functionality as
+      described in the README file.
       \LineBreak
       These are available in the engines\LineBreak
       - pdfTeX v1.40\LineBreak
       - XeTeX v0.9994\LineBreak
-      - LuaTeX v0.40\LineBreak
+      - LuaTeX v0.70\LineBreak
       - e-(u)pTeX mid-2012\LineBreak
       or later.\LineBreak
       \LineBreak
